2007-02-22  Sven Neumann  <sven@gimp.org>

	* app/base/base-types.h
	* app/base/pixel-surround.[ch]: hide PixelSurround struct and
	cleaned up the PixelSurround API.

	* app/core/gimp-transform-region.c: changed accordingly. Also
	sprinkled some const qualifiers.

2007-02-22  Sven Neumann  <sven@gimp.org>

	* app/base/tile.[ch]: made tile_ref_count a static variable and
	added a function to access it.  Declared other (unused) global
	counters as static variables and moved them into #ifdefs.

	* app/base/tile-swap.c: use the function instead of declaring
	tile_ref_count as extern.

	* app/base/tile-manager.c
	* app/base/pixel-surround.c: cosmetics.

2007-02-23  Tor Lillqvist  <tml@novell.com>

	* configure.in: Fix logic error in saving and restoring CPPFLAGS
	for the DirectInput checks.

2007-02-22  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/plug-ins/Makefile.am
	* plug-ins/script-fu/scripts/Makefile.am: stop installing any test
	scripts.

2007-02-22  Sven Neumann  <sven@gimp.org>

	* app/dialogs/authors.xsl: use a named template to avoid code
	duplication.

2007-02-22  Tor Lillqvist  <tml@novell.com>

	* modules/gimpinputdevicestore.c: Define
	GET_MODULE_HANDLE_EX_FLAG_FROM_ADDRESS if necessary.

	* configure.in: Add --with-directx-sdk switch instead of relying
	on CPPFLAGS and LDFLAGS. Drop the --without-directinput switch.

2007-02-21  Sven Neumann  <sven@gimp.org>

	* app/dialogs/Makefile.am: added an explicit dependency on authors.h.

2007-02-21  Tor Lillqvist  <tml@novell.com>

	* modules/Makefile.am: It's pointless to build
	libcontroller_midi.la on Windows, even if it happens to compile
	and build. There are no MIDI "device files" on Windows. A totally
	specific MIDI API would have to be used.

2007-02-20  DindinX  <dindinx@gimp.org>

	* plug-ins/common/gee.c: use our indentation and spacing way.

2007-02-20  Tor Lillqvist  <tml@novell.com>

	* app/widgets/gimpcontrollereditor.c
	(gimp_controller_editor_sel_changed): Guard against event being
	NULL.
